--- a/static/css/album.css
+++ b/static/css/album.css
@@ -1,8 +1,14 @@
+footer .copyright{
+  text-align:center;
+  font-size: 1.8rem;
+}
+
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
 }
 
 .navbar {
+  border-top: 1px solid #999;
   margin-bottom: 0;
 }
 
@@ -34,18 +40,24 @@ body {
 
 .card {
   float: left;
-  width: 33.333%;
+  width: 33%;
   padding: .75rem;
   margin-bottom: 2rem;
   border: 0;
+  margin-right: .23rem
 }
+.card:nth-child(3n+3){
+  margin-right:0;
 
+}
 .card > img {
   margin-bottom: .75rem;
-  width: 200px;
-  height:200px;
+  width: 100%;
+  height:100%;
 }
-
+.card a.btn{
+  font-size:1.3vw;
+}
 .card-text {
   font-size: 85%;
 }
