--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/soldier.css' %}" />
     <link href="{% static 'css/album.css' %}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://use.fontawesome.com/03af89a1dd.js"></script>
+
     {% bootstrap_javascript jquery=1 %}
     {% bootstrap_css %}
     
@@ -24,22 +26,32 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 py-4">
-                        <h4 class="text-white">About</h4>
-                        <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few
-                            sentences long so folks can pick up some informative tidbits. Then, link them off to some social
-                            networking sites or contact information.</p>
+                        <h4 class="text-white">Че Почем <i class="material-icons">face</i></h4>
+                        <p class="text-muted">
+                            Это портфолио. Сайт сделан на Django 2.0, здесь работы и наработки которые я выполнял, сайт просто сделал по приколу.</br>
+                            Имперского штурмовика <i class="material-icons">directions_walk</i> делал не я, просто скопипастил и настроил.
+                        </p>
                     </div>
                     <div class="col-sm-4 py-4">
-                        <h4 class="text-white">Contact</h4>
+                        <h4 class="text-white">Как со мной связаться <i class="fa fa-hand-spock-o" aria-hidden="true"></i>
+</h4>
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#" class="text-white">Follow on Twitter</a>
+                                <a href="https://github.com/dokazhi" class="text-white"><i class="fa fa-github fa-lg" aria-hidden="true"></i> GitHub</a>
                             </li>
                             <li>
-                                <a href="#" class="text-white">Like on Facebook</a>
+                                <a href="https://vk.com/kajikumarov" class="text-white"><i class="fa fa-vk" aria-hidden="true"></i> VK</a>
                             </li>
                             <li>
-                                <a href="#" class="text-white">Email me</a>
+                                <a href="mailto:dosmurat.kazhikumarov@gmail.com" class="text-white"><i class="fa fa-google-plus" aria-hidden="true"></i> GMail</a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/dosmurat-kazhikumarov-77469312b/" class="text-white">
+                                    <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i> LinkedIn</a>
+                            </li>
+                            <li>
+                                <p class="text-white">
+                                    <i class="fa fa-whatsapp fa-lg" aria-hidden="true"></i> +7 702 112 08 98</p>
                             </li>
                         </ul>
                     </div>
@@ -48,7 +60,7 @@
         </div>
         <div class="navbar navbar-dark bg-dark">
             <div class="container d-flex justify-content-between">
-                <a href="#" class="navbar-brand">PORTFOLIO</a>
+                <a href="#" class="navbar-brand">Dokazhi</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
