last commit b4 release on heroku

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,9 @@
      </title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/soldier.css' %}" />
     <link href="{% static 'css/album.css' %}" rel="stylesheet">
+    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+    <link href="{% static 'css/slider.css' %}" rel="stylesheet">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://use.fontawesome.com/03af89a1dd.js"></script>
 
@@ -60,7 +63,7 @@
         </div>
         <div class="navbar navbar-dark bg-dark">
             <div class="container d-flex justify-content-between">
-                <a href="#" class="navbar-brand">DOKAZHI</a>
+                <a href="/" class="navbar-brand">DOKAZHI</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
